<resources>
    <string name="app_name">LAB_WEEK_03</string>

    <string name="affogato_title">AFFOGATO</string>
    <string name="affogato_desc">Espresso poured on a vanilla ice cream. Served in a cappuccino cup.</string>

    <string name="americano_title">AMERICANO</string>
    <string name="americano_desc">Espresso with added hot water (100-150 ml). Often served in a cappuccino cup. (The espresso is added into the hot water rather than all the water being flowed through the coffee that would lead to over extraction.)</string>

    <string name="latte_title">CAFFE LATTE</string>
    <string name="latte_desc">A tall, mild milk coffee (about 150-300 ml). An espresso with steamed milk and only a little milk foam poured over it. Serve in a latte glass or a coffee cup. Flavored syrup can be added.</string>

    <string name="espresso_title">ESPRESSO</string>
    <string name="espresso_desc">A concentrated form of coffee served in small, strong shots, made by forcing hot water through finely-ground coffee beans.</string>

    <string name="cappuccino_title">CAPPUCCINO</string>
    <string name="cappuccino_desc">An espresso-based coffee drink topped with steamed milk foam, sometimes sprinkled with cocoa powder or cinnamon.</string>

    <string name="coffee_list">Coffee List</string>
</resources>
