<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/affogato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/affogato_title"
        android:background="?attr/selectableItemBackground"
        android:clickable="true" />

    <TextView
        android:id="@+id/americano"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/americano_title"
        android:background="?attr/selectableItemBackground"
        android:clickable="true" />

    <TextView
        android:id="@+id/latte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/latte_title"
        android:background="?attr/selectableItemBackground"
        android:clickable="true" />

    <TextView
        android:id="@+id/espresso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/espresso_title"
        android:background="?attr/selectableItemBackground"
        android:clickable="true" />

    <TextView
        android:id="@+id/cappuccino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/cappuccino_title"
        android:background="?attr/selectableItemBackground"
        android:clickable="true" />

</LinearLayout>
